extract: learn to rewind if needed

In some cases, files my point to previously treated offset. Let's rewind
in this case.

https://bugzilla.gnome.org/show_bug.cgi?id=763377